# cmake-template

./: .gitignore  CMakeLists.txt  README.md
components/module_a/: module_a.c  module_a.h
doc/: Doxyfile  Doxyfile.in
